{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 814,
  "lineage": "c352b4fe-a430-38bd-a293-3d7d87bdfb1f",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "webapp_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/devops-227900/zones/us-west1-a/instanceGroups/webapp-mig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2025-03-21T09:39:28.068-07:00",
            "enable_cdn": false,
            "fingerprint": "RvAdhAUWyqY=",
            "generated_id": 4911441298183956655,
            "health_checks": [
              "projects/devops-227900/global/healthChecks/autohealing-health-check"
            ],
            "id": "projects/devops-227900/global/backendServices/webapp-backend",
            "load_balancing_scheme": "EXTERNAL",
            "name": "webapp-backend",
            "port_name": "http",
            "project": "devops-227900",
            "protocol": "HTTPS",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-227900/global/backendServices/webapp-backend",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_global_address.private_ip_range",
            "google_compute_health_check.autohealing",
            "google_compute_instance_group_manager.webapp_mig",
            "google_compute_instance_template.webapp_template",
            "google_compute_network.main_vpc_network",
            "google_compute_subnetwork.public_subnet",
            "google_project_service.service_networking",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.webapp_db",
            "time_sleep.wait_for_health_check"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-21T08:50:27.253-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-227900/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-227900/global/networks/main-vpc-network",
            "priority": 1000,
            "project": "devops-227900",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-227900/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "webapp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main_vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-21T08:50:27.585-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-227900/global/firewalls/allow-internal",
            "log_config": [],
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-227900/global/networks/main-vpc-network",
            "priority": 1000,
            "project": "devops-227900",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-227900/global/firewalls/allow-internal",
            "source_ranges": [
              "10.10.1.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main_vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-03-21T08:50:27.282-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devops-227900/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-227900/global/networks/main-vpc-network",
            "priority": 1000,
            "project": "devops-227900",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-227900/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "webapp"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main_vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.110.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2025-03-21T08:50:27.265-07:00",
            "id": "projects/devops-227900/global/addresses/private-ip-range",
            "name": "private-ip-range",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-227900/global/networks/main-vpc-network",
            "prefix_length": 16,
            "project": "devops-227900",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-227900/global/addresses/private-ip-range"
          },
          "dependencies": [
            "google_compute_network.main_vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "webapp_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/devops-227900/global/forwardingRules/webapp-lb",
            "ip_address": "35.190.56.206",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "webapp-lb",
            "port_range": "80-80",
            "project": "devops-227900",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-227900/global/forwardingRules/webapp-lb",
            "target": "https://www.googleapis.com/compute/v1/projects/devops-227900/global/targetHttpProxies/webapp-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.webapp_backend",
            "google_compute_global_address.private_ip_range",
            "google_compute_health_check.autohealing",
            "google_compute_instance_group_manager.webapp_mig",
            "google_compute_instance_template.webapp_template",
            "google_compute_network.main_vpc_network",
            "google_compute_subnetwork.public_subnet",
            "google_compute_target_http_proxy.webapp_proxy",
            "google_compute_url_map.webapp_url_map",
            "google_project_service.service_networking",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.webapp_db",
            "time_sleep.wait_for_health_check"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main_vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "This is a main VPC network",
            "enable_ula_internal_ipv6": false,
            "id": "projects/devops-227900/global/networks/main-vpc-network",
            "mtu": 0,
            "name": "main-vpc-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "devops-227900",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-227900/global/networks/main-vpc-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_route",
      "name": "internet_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "",
            "dest_range": "0.0.0.0/0",
            "id": "projects/devops-227900/global/routes/internet-route",
            "name": "internet-route",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-227900/global/networks/main-vpc-network",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/devops-227900/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 100,
            "project": "devops-227900",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-227900/global/routes/internet-route",
            "tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.main_vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "cloud_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-21T08:50:50.853-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/devops-227900/regions/us-west1/routers/my-cloud-router",
            "name": "my-cloud-router",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-227900/global/networks/main-vpc-network",
            "project": "devops-227900",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-227900/regions/us-west1/routers/my-cloud-router"
          },
          "dependencies": [
            "google_compute_network.main_vpc_network",
            "google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "devops-227900/us-west1/my-cloud-router/my-nat-gateway",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "my-nat-gateway",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "devops-227900",
            "region": "us-west1",
            "router": "my-cloud-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.main_vpc_network",
            "google_compute_router.cloud_router",
            "google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-21T08:50:29.716-07:00",
            "gateway_address": "10.10.2.1",
            "id": "projects/devops-227900/regions/us-west1/subnetworks/private-subnet",
            "ip_cidr_range": "10.10.2.0/24",
            "name": "private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-227900/global/networks/main-vpc-network",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "devops-227900",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-227900/regions/us-west1/subnetworks/private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.main_vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-21T08:50:28.122-07:00",
            "gateway_address": "10.10.1.1",
            "id": "projects/devops-227900/regions/us-west1/subnetworks/public-subnet",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/devops-227900/global/networks/main-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "devops-227900",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-227900/regions/us-west1/subnetworks/public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.main_vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "webapp_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-21T09:40:22.062-07:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/devops-227900/global/targetHttpProxies/webapp-proxy",
            "name": "webapp-proxy",
            "project": "devops-227900",
            "proxy_bind": false,
            "proxy_id": 3237313868551170201,
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-227900/global/targetHttpProxies/webapp-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/devops-227900/global/urlMaps/webapp-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.webapp_backend",
            "google_compute_global_address.private_ip_range",
            "google_compute_health_check.autohealing",
            "google_compute_instance_group_manager.webapp_mig",
            "google_compute_instance_template.webapp_template",
            "google_compute_network.main_vpc_network",
            "google_compute_subnetwork.public_subnet",
            "google_compute_url_map.webapp_url_map",
            "google_project_service.service_networking",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.webapp_db",
            "time_sleep.wait_for_health_check"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "webapp_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-03-21T09:40:10.582-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/devops-227900/global/backendServices/webapp-backend",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "ze-K5uUH94E=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/devops-227900/global/urlMaps/webapp-url-map",
            "map_id": 7540626015424358533,
            "name": "webapp-url-map",
            "path_matcher": [],
            "project": "devops-227900",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devops-227900/global/urlMaps/webapp-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.webapp_backend",
            "google_compute_global_address.private_ip_range",
            "google_compute_health_check.autohealing",
            "google_compute_instance_group_manager.webapp_mig",
            "google_compute_instance_template.webapp_template",
            "google_compute_network.main_vpc_network",
            "google_compute_subnetwork.public_subnet",
            "google_project_service.service_networking",
            "google_service_networking_connection.private_vpc_connection",
            "google_sql_database_instance.webapp_db",
            "time_sleep.wait_for_health_check"
          ]
        }
      ]
    }
  ]
}